unpackaged/main/default/objects/Activity/fields/Date_Feedback_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Feedback_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Feedback Sent</label>
    <type>Date</type>
</CustomField>