unpackaged/main/default/objects/Activity/fields/Date_File_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_File_Received__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date File Received</label>
    <type>Date</type>
</CustomField>