unpackaged/main/default/objects/Activity/fields/Date_Time_Activity_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Activity_Created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Time Activity Created</label>
    <type>DateTime</type>
</CustomField>