unpackaged/main/default/objects/Activity/fields/Days_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Send__c</fullName>
    <formula>IF ( Days_to_SendF__c &lt; 0,0, Days_to_SendF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Send</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>