unpackaged/main/default/objects/Activity/fields/Days_to_SendF__c.field-meta.xml
<CustomField>
    <fullName>Days_to_SendF__c</fullName>
    <formula>IF(  ISNULL(Date_Feedback_Sent__c ) , 0, 5 * ( FLOOR( ( BLANKVALUE(Date_Feedback_Sent__c , TODAY()) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( BLANKVALUE(Date_Feedback_Sent__c , TODAY()) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( Date_File_Received__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Date_File_Received__c - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <label>Days to SendF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>