unpackaged/main/default/objects/Activity/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <formula>IF( ActivityDate  &lt; TODAY()&amp;&amp;NOT(ISPICKVAL(Status,&quot;Complete&quot;)), TODAY()-ActivityDate, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>