unpackaged/main/default/objects/Activity/fields/Task_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who marked the Task as Complete</description>
    <label>Completed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>