unpackaged/main/default/objects/Activity/fields/TaskTAT__c.field-meta.xml
<CustomField>
    <fullName>TaskTAT__c</fullName>
    <formula>IF(DATEVALUE(CompletedDateTime) &lt; ActivityDate, 0, (5 * ( FLOOR( (  DATEVALUE( CompletedDateTime ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE( CompletedDateTime ) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (ActivityDate  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(ActivityDate - DATE( 1900, 1, 8), 7 ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task TAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>