unpackaged/main/default/objects/Activity/fields/Visible_in_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_Self_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible in Self-Service</label>
    <type>Checkbox</type>
</CustomField>