unpackaged/main/default/objects/Activity/listViews/Central_Record_Open_Activities_from_M_B.listView-meta.xml
<ListView>
    <fullName>Central_Record_Open_Activities_from_M_B</fullName>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>IS_REMINDER_SET</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_ROLE</field>
        <operation>contains</operation>
        <value>Analyst (CR)</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Received</value>
    </filters>
    <label>Central Record Open Activities from M&amp;B</label>
    <sharedTo>
        <role>Member_Services_Analyst_M_B_CR</role>
    </sharedTo>
</ListView>