unpackaged/main/default/objects/Activity/listViews/M_B_Open_Activities.listView-meta.xml
<ListView>
    <fullName>M_B_Open_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_ROLE</field>
        <operation>contains</operation>
        <value>(M&amp;B)</value>
    </filters>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <label>M&amp;B Open Activities</label>
    <sharedTo>
        <group>All_Membership_Billing</group>
    </sharedTo>
</ListView>