unpackaged/main/default/objects/Activity/listViews/My_Completed_Activities.listView-meta.xml
<ListView>
    <fullName>My_Completed_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>My Activities Completed</label>
</ListView>