unpackaged/main/default/objects/Activity/listViews/My_Open_Activities.listView-meta.xml
<ListView>
    <fullName>My_Open_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,Waiting on someone else,Deferred</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Activities Open</label>
</ListView>