unpackaged/main/default/objects/Activity/listViews/My_Teams_Activities_that_are_Due.listView-meta.xml
<ListView>
    <fullName>My_Teams_Activities_that_are_Due</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Team</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed,Deferred,Received</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>My Teams Activities that are Due</label>
    <sharedTo>
        <role>Manager_Billing_Solutions_M_B</role>
        <role>Manager_CS</role>
        <role>Manager_Claims</role>
        <role>Manager_Corp_Proj</role>
        <role>Manager_EDI_ES</role>
        <role>Manager_HI_Claims</role>
        <role>Manager_Member_Services_M_B</role>
        <role>Manager_PS</role>
        <role>Manager_SBMA</role>
        <role>Premium_Specialist_Billing_Solutions_M_B_Supervisor</role>
        <role>Project_Manager_Corp_Proj</role>
        <role>Supervisor_CS</role>
        <role>Supervisor_Claims</role>
        <role>Supervisor_ES</role>
        <role>Supervisor_IT</role>
        <role>Supervisor_PS</role>
        <role>Supervisor_SBMA</role>
    </sharedTo>
</ListView>